cmake_minimum_required(VERSION 3.6)
project(pccb)
set(CMAKE_CXX_STANDARD 11)

add_executable(p161-1 main1.6.1-1.cpp)
add_executable(p162-1 main1.6.2-1.cpp)
add_executable(p163-2 main1.6.3-2.cpp)
add_executable(p211 main-2.1.1.cpp)
add_executable(p214-1 main-2.1.4-1.cpp)
add_executable(p214-2 main-2.1.4-2.cpp)
